(library
  (name mirage_http)
  (public_name mirage-http)
  (wrapped false)
  (modules_without_implementation mirage_http)
  (modules mirage_http)
  (libraries lwt mirage-conduit cstruct mirage-channel-lwt))

(library
  (name mirage_http_cohttp)
  (public_name mirage-http.cohttp)
  (wrapped false)
  (modules mirage_http_cohttp)
  (libraries mirage-http mirage-conduit cohttp-mirage))

;(library
;  (name mirage_http_httpaf)
;  (public_name mirage-http.httpaf)
;  (wrapped false)
;  (modules mirage_http_httpaf)
;  (libraries mirage-http mirage-conduit httpaf-mirage))