(library
 (name mirage_http)
 (public_name mirage-http)
 (wrapped false)
 (modules mirage_http mirage_http_io)
 (private_modules mirage_http_io)
 (libraries mirage-conduit mirage-channel-lwt))

(library
 (name mirage_http_cohttp)
 (public_name mirage-http.cohttp)
 (wrapped false)
 (modules mirage_http_cohttp)
 (libraries mirage-http cohttp-mirage))

(library
  (name mirage_http_httpaf)
  (public_name mirage-http.httpaf)
  (wrapped false)
  (modules mirage_http_httpaf)
  (libraries mirage-http httpaf-mirage))
